2011-09-12  Dario Rodriguez <dario.rodriguez@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed some problems with the script.

2011-09-12  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control: Updated version to 4.0 (final).

	* pandora_server.spec: Updated version. Added mibs package 
	for dependency (Snmp mibs needed to be installed!), without
	that, network server and some scripts won't run properly.

	* pandora_server.redhat.spec,
	lib/PandoraFMS/Config.pm: Updated version to 4.0 final.

2011-09-12  Dario Rodriguez <dario.rodriguez@artica.es>

	* DEBIAN/control: Added dependence of snmp-mibs-downloader
	* pandora_server_installer: Added dependence of snmp-mibs-downloader

2011-09-08  Sancho Lerena <slerena@artica.es>

	*  lib/PandoraFMS/Network.pm: Missing include for function
	SNMP::translateObj. Added SNMP include: I don't understand why that
	was missing ¿?.
		
2011-09-06  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed action search for event alerts.

2011-09-06  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NmapParser.pm: Remove nmap warnings from output.

2011-09-05  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Disable ICMP and SNMP enterprise servers
	  by default.

2011-09-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm, lib/PandoraFMS/Core.pm: Fixed policy queue (was
	  not working properly).

2011-09-02  Vanessa Gil  <vanessa.gil@artica.es>

	* pandora_server/conf/pandora_server.conf: Added update parent line to the configuration file.

2011-09-01  Tomas Palacios  <tomas.palacios@artica.es>

	* pandora_server/DEBIAN/control: Added missing comma.

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* util/agent_names.txt: erased wrong personal file for the tests.

2011-09-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Kill snmptrapd if it's already running
	  when the SNMP Console starts and launch it again. Fixes bug #3402392.
