@@ -1,3 +1,9 @@
+2011-09-12  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* pandora_server/util/pandora_manage.pl: Applied Kosaka's patch to store
+	data in DB with encoding in HTML entities.
+
+
 2011-09-12  Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* util/recon_scripts/snmpdevices.pl: Fixed some problems with the script.
